tests/snapshots/run_wpt_conformance__trtx_cast_int32_4D_constant_tensor_to_float32.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast int32 4D constant tensor to float32",
    "trtx",
    "PASS",
)
