tests/snapshots/run_wpt_conformance__trtx_cast_int64_4D_tensor_to_float32.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast int64 4D tensor to float32",
    "trtx",
    "PASS",
)
